--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ debugpy==1.8.1
 decorator==5.1.1
 executing==2.0.1
 Flask==3.0.2
+Flask-Cors==4.0.0
 Flask-Migrate==4.0.7
 flask-smorest==0.44.0
 Flask-SQLAlchemy==3.1.1
